# OCCT

./: .gitignore
samples/wtl/: SimpleApp.sln
samples/wtl/SimpleApp/: CMakeLists.txt  MainFrm.h  SimpleApp.cpp  SimpleApp.h  SimpleApp.rc  SimpleApp.vcxproj  SimpleApp.vcxproj.filters  View.cpp  View.h  XSDRAWSTLVRML_DataSource.cpp  resource.h  stdafx.cpp  stdafx.h
